# ONITSIR

./: .gitignore  LICENSE  NOTICE  README.md  app.js  index.html  pyproject.toml  roster.json
docs/: ARCHITECTURE.md
onitsir/: __init__.py  cli.py  engine.py  roster.py  router.py  shackle.py  verification.py  workflow.py
scripts/: deploy.py  finish_push.py  gen_roster.py  push_batched.py  push_to_github.py  verify_repo.py
site/: index.html  verify_engine.js
tests/: conftest.py  test_cli.py  test_engine.py  test_roster.py  test_router.py  test_shackle.py  test_verification.py  test_workflow.py
